# labs_CPP

./: README.md
lab1(Geometry and palindrome)/: CMakeLists.txt  main.cpp
lab2(Libraries + JSON)/: CMakeLists.txt  CurrenciesMath.h  Entities.h  Request.h  main.cpp
lab3(Ring buffer)/: main.cpp
lab4(Cube)/: CMakeLists.txt  cube_status.txt  main.cpp
lab5(Allocator)/: main.cpp
lab6(Calculations during compilation)/: CMakeLists.txt  main.cpp
lab6(Calculations during compilation)/lib/: CMakeLists.txt  polynomial.cpp  polynomial.h
lab6(Calculations during compilation)/testing/: CMakeLists.txt  testing.cc
